# typos-corrector

./: .gitignore
country-dataset/: check_accuracy.py  convert_model.py  train.sh
country-dataset/dataset/: countries  test  train
country-dataset/model/: data  labels
cplusplus/: CMakeLists.txt  compressor.cpp  compressor.h  contaminator.cpp  contaminator.h  dataset-preparer.cpp  dictionary.cpp  dictionary.h  main.cpp  network-talker.cpp  ngrams.cpp  ngrams.h  prefix-tree-builder.cpp  prefix-tree-builder.h  prefix-tree.cpp  prefix-tree.h  python-bindings.cpp  python-bindings.h  random-batch-generator.cpp  random-batch-generator.h  utils.cpp  utils.h
cplusplus/dataset/: CMakeLists.txt  compressor.cpp  dataset.cpp  dataset.h
cplusplus/dataset-generator/: CMakeLists.txt  contaminator.cpp  contaminator.h  main.cpp  ngrams.cpp  random-batch-generator.cpp  random-batch-generator.h
cplusplus/lstm/: CMakeLists.txt  compressed_lstm.cl  compressed_lstm.cpp  compressed_lstm.h  lstm.cl  lstm.cpp  lstm.h  main.cpp  sum-counter.cl  sum-counter.cpp  sum-counter.h
cplusplus/network-hypo-searcher/: CMakeLists.txt  common.cpp  common.h  compressed-lstm-cpu.cpp  compressed-lstm-cpu.h  compressed-lstm-gpu.cpp  compressed-lstm-gpu.h  compressed-lstm.cl  compressed-lstm.cpp  compressed-lstm.h  hypo-keeper.cpp  hypo-keeper.h  hypo-searcher.cpp  hypo-searcher.h  i-database-requester.cpp  i-database-requester.h  main.cpp  multi-hypo-searcher.cpp  multi-hypo-searcher.h  network-automata-cpu.cpp  network-automata-cpu.h  network-automata-gpu.cpp  network-automata-gpu.h  network-automata.cl  network-automata.cpp  network-automata.h  opencl-connector.cpp  opencl-connector.h  prefix-tree-hypo-searcher.cpp  prefix-tree-hypo-searcher.h  utils.h  vw-model.cpp  vw-model.h
cplusplus/network-talker/: CMakeLists.txt  message.pb.cc  message.pb.h  message.proto  network-talker.cpp
cplusplus/opencl-connector/: CMakeLists.txt  gemm-processor.cl  gemm-processor.cpp  gemm-processor.h  main.cpp  matrix-multiplicator.cl  matrix-multiplicator.cpp  matrix-multiplicator.h  opencl-connector.cpp  opencl-connector.h
cplusplus/prefix-tree/: CMakeLists.txt  main.cpp  prefix-tree-builder.cpp  prefix-tree-builder.h  prefix-tree.cpp  prefix-tree.h
cplusplus/proto/: CMakeLists.txt
cplusplus/python-bindings/: CMakeLists.txt  compressor.cpp  compressor.h  contaminator.cpp  dataset.cpp  dataset.h  ngrams.cpp  python-bindings.cpp  python-bindings.h  random-batch-generator.cpp  random-batch-generator.h  update-regions.cpp  update-regions.h  utils.cpp
cplusplus/utils/: CMakeLists.txt  utils.cpp  utils.h
cplusplus/vw-model/: CMakeLists.txt  main.cpp  vw-model.cpp  vw-model.h
python/: compressor.py  convertions.py  cpp_bindings.py  create_dataset.py  dataset_creator.py  dataset_generator.py  dataset_reader.py  demo_server.py  index.html  network.py  ngrams.py  prefix_tree.py  protobuf_talker.py  test_random_batch_generator.py  tornado-example1.py  utils.py
python/model/: dictionary  first-mistake-statistics  ngrams  prefix-tree
python/model/model-1/: model.data-00000-of-00001  model.index
python/model/parameters/: decode_lstm_bias  decode_lstm_left_matrix  decode_lstm_right_matrix  encode_lstm_bias  encode_lstm_left_matrix  encode_lstm_right_matrix  hidden_layer_bias  hidden_layer_weights
python/model/update-regions/: NAV_AUTO-UR_100-POI.NDS  NAV_AUTO-UR_102-POI.NDS  NAV_AUTO-UR_108-POI.NDS  NAV_AUTO-UR_110-POI.NDS  NAV_AUTO-UR_111-POI.NDS  NAV_AUTO-UR_112-POI.NDS  NAV_AUTO-UR_113-POI.NDS  NAV_AUTO-UR_116-POI.NDS  NAV_AUTO-UR_119-POI.NDS  NAV_AUTO-UR_120-POI.NDS  NAV_AUTO-UR_121-POI.NDS  NAV_AUTO-UR_122-POI.NDS  NAV_AUTO-UR_125-POI.NDS  NAV_AUTO-UR_126-POI.NDS  NAV_AUTO-UR_127-POI.NDS  NAV_AUTO-UR_128-POI.NDS  NAV_AUTO-UR_129-POI.NDS  NAV_AUTO-UR_130-POI.NDS  NAV_AUTO-UR_131-POI.NDS  NAV_AUTO-UR_132-POI.NDS  NAV_AUTO-UR_133-POI.NDS  NAV_AUTO-UR_134-POI.NDS  NAV_AUTO-UR_135-POI.NDS  NAV_AUTO-UR_136-POI.NDS  NAV_AUTO-UR_137-POI.NDS  NAV_AUTO-UR_138-POI.NDS  NAV_AUTO-UR_139-POI.NDS  NAV_AUTO-UR_140-POI.NDS  NAV_AUTO-UR_141-POI.NDS  NAV_AUTO-UR_143-POI.NDS  NAV_AUTO-UR_144-POI.NDS  NAV_AUTO-UR_146-POI.NDS  NAV_AUTO-UR_147-POI.NDS
python/models/binaries/belgium/: decode_lstm_bias  decode_lstm_left_matrix  decode_lstm_right_matrix  encode_lstm_bias  encode_lstm_left_matrix  encode_lstm_right_matrix  first-mistake-statistics  hidden_layer_bias  hidden_layer_weights
python/models/binaries/france/: decode_lstm_bias  decode_lstm_left_matrix  decode_lstm_right_matrix  encode_lstm_bias  encode_lstm_left_matrix  encode_lstm_right_matrix  first-mistake-statistics  hidden_layer_bias  hidden_layer_weights
python/models/binaries/germany/: decode_lstm_bias  decode_lstm_left_matrix  decode_lstm_right_matrix  encode_lstm_bias  encode_lstm_left_matrix  encode_lstm_right_matrix  first-mistake-statistics  hidden_layer_bias  hidden_layer_weights
python/models/binaries/ireland/: decode_lstm_bias  decode_lstm_left_matrix  decode_lstm_right_matrix  encode_lstm_bias  encode_lstm_left_matrix  encode_lstm_right_matrix  first-mistake-statistics  hidden_layer_bias  hidden_layer_weights
python/models/binaries/italy/: decode_lstm_bias  decode_lstm_left_matrix  decode_lstm_right_matrix  encode_lstm_bias  encode_lstm_left_matrix  encode_lstm_right_matrix  first-mistake-statistics  hidden_layer_bias  hidden_layer_weights
python/models/binaries/poland/: decode_lstm_bias  decode_lstm_left_matrix  decode_lstm_right_matrix  encode_lstm_bias  encode_lstm_left_matrix  encode_lstm_right_matrix  first-mistake-statistics  hidden_layer_bias  hidden_layer_weights
python/models/binaries/spain/: decode_lstm_bias  decode_lstm_left_matrix  decode_lstm_right_matrix  encode_lstm_bias  encode_lstm_left_matrix  encode_lstm_right_matrix  first-mistake-statistics  hidden_layer_bias  hidden_layer_weights
python/models/binaries/switzerland/: decode_lstm_bias  decode_lstm_left_matrix  (+7 more)
shell-scripts/: README.md  android-build.sh  build-cplusplus.sh  collaborator.sh  create-prefix-tree.sh  listen.sh  play.sh  prepare-datasest.sh  start-server.sh  train.sh
(+38 files in other folders)
