cmake_minimum_required(VERSION 2.8)
project(typos-corrector)

if (${PLATFORM} MATCHES ANDROID)
    MESSAGE(WARNING "Building for Android")
    SET(COMMON_CXX_FLAGS "-std=c++14 -Wall -Werror -Wno-missing-braces")
    set(CMAKE_EXE_LINKER_FLAGS "-static-libstdc++")
else ()
    MESSAGE(WARNING "Building for Linux")
    SET(COMMON_CXX_FLAGS "-std=c++14 -m64 -fPIC -Wall -Werror")
endif ()

if (${CMAKE_BUILD_TYPE} MATCHES RELEASE)
    MESSAGE(WARNING "Building RELEASE version: -Ofast is used")
    SET(CMAKE_CXX_FLAGS "-Ofast ${COMMON_CXX_FLAGS}")
else ()
    MESSAGE(WARNING "Building DEBUG version: -O0 is used")
    SET(CMAKE_CXX_FLAGS "-O0 -g ${COMMON_CXX_FLAGS}")
endif ()

add_subdirectory(dataset)
add_subdirectory(dataset-generator)
add_subdirectory(network-hypo-searcher)
add_subdirectory(opencl-connector)
add_subdirectory(python-bindings)
add_subdirectory(utils)
